deploy/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plavenky
spec:
  rules:
    - host: staging-plavenky.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-plavenky
                port:
                  number: 80
